--- a/ rhyton-common-dao/rhyton-dao-google/.classpath
+++ b/ rhyton-common-dao/rhyton-dao-google/.classpath
@@ -3,21 +3,37 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="lib/asm-1.5.3.jar"/>
-	<classpathentry kind="lib" path="lib/cglib-2.1_3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="lib/ehcache-1.2.4.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-3.2.5.ga.jar"/>
-	<classpathentry kind="lib" path="lib/ibatis-2.3.0.677.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/oscache-2.3.jar"/>
-	<classpathentry kind="lib" path="lib/spring.jar" sourcepath="E:/Handy API Reference Collection/src/spring-sources-2.5"/>
-	<classpathentry kind="lib" path="lib/spring-test-2.5.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-beanutils.jar"/>
 	<classpathentry kind="src" path="resource"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/asm-1.5.3.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/asm-attrs.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/aspectjweaver.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/axis.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/bsh-1.3.0.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/cglib-2.1_3.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-beanutils-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-betwixt-0.7.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-io.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-lang-2.3.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-pool.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/ehcache-1.2.4.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/ibatis-2.3.0.677.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/jdbc2_0-stdext.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/ognl.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/spring-2.5.jar" sourcepath="E:/Handy API Reference Collection/src/spring-sources-2.5"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/spring-test-2.5.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/xalan-2.7.0.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/xerces-2.6.2.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/xstream.jar"/>
+	<classpathentry kind="lib" path="/rhSecure_2/WebRoot/WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="E:/spring-framework-2.5/lib/hibernate/hibernate3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
